@@ -2,6 +2,8 @@
 
 	* configure: document --enable-maintainer-mode
 	* makemake.in: handle --enable-maintainer-mode
+	the only developer targer (affected by --enable-maintainer-mode)
+	is remaking src/configure using autoconf
 
 2005-09-15  Sam Steingold  <sds@gnu.org>
 
